# darknet-ncnn-android

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: words.names  yolov3-tiny.param
app/src/main/cpp/: yolov3-tiny-jni.cpp
app/src/main/java/com/example/yolov3tiny/: MainActivity.java  PhotoUtil.java  yolov3Tiny.java
app/src/main/java/com/tarmac/yolov2Tiny/: MainActivity.java  yolov2Tiny.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
